--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -5,122 +5,94 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
+    <!-- <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css" type="text/css"> -->
     <link rel="stylesheet" href="./css/custom-theme.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>DM121</title>
 </head>
 
 <body id="page-top">
-    <header id="header">
-        <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="main-nav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">W&M</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                        Menu
-                        <i class="fas fa-bars"></i>
-                      </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1">
-                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#home">Home</a>
-                        </li>
-                        <li class="nav-item mx-0 mx-lg-1">
-                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfólio</a>
-                        </li>
-                        <li class="nav-item mx-0 mx-lg-1">
-                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#sobre">Sobre</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
 
-    <section class="portfolio clearfix">
-        <div class="container" id="home">
-            <h2 class="text-center text-uppercase text-dark mb-0">Web e Mobile</h2>
-            <hr class="mb-5">
-            <div class="row">
-                <div class="col-md-6">
-                    <a class="portfolio-item d-block mx-auto">
-                        <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                            <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="images/home.jpg" alt="">
-                    </a>
-                </div>
-                <div class="col-md-6">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ullam amet nostrum. Laborum eaque totam adipisci, perspiciatis. Est in provident tempore. Sapiente, molestias quos distinctio cupiditate maiores laborum accusantium quia.
-                    </p>
-                </div>
+    <nav class="navbar navbar-expand-lg bg-secondary 
+  fixed-top" id="main-nav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger text-white" href="#page-top">W&M</a>
+            <button class="navbar-toggler navbar-toggler-right" 
+            type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <a>Menu</a>
+                <!-- <i class="fa fa-bars"></i> -->
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfólio</a>
+                    </li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#sobre">Sobre</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </section>
+    </nav>
 
-    <section class="portfolio clearfix" id="portfolio">
+    <header class="masthead">
+        <section class="portfolio" id="home">
+            <div class="container">
+                <h2 class="text-center text-dark mb-0">Web e Mobile</h2>
+                <hr class="mb-3">
+                <div class="row">
+                    <div class="col-md-6">
+                        <a class="portfolio-item d-block mx-auto">
+                            <img class="img-fluid" src="images/home.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem ullam amet nostrum. Laborum eaque totam
+                            adipisci, perspiciatis. Est in provident tempore. Sapiente, molestias quos distinctio cupiditate
+                            maiores laborum accusantium quia.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
+
+    <section class="portfolio" id="portfolio">
         <div class="container">
-            <h2 class="text-center text-uppercase text-dark mb-0">Portfólio</h2>
+            <h2 class="text-center text-dark mb-0">Portfólio</h2>
             <hr class="mb-3">
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-                        <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                            <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
+                    <a class="portfolio-item d-block mx-auto">
                         <img class="img-fluid" src="images/portfolio1.png" alt="">
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-                        <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                            <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
+                    <a class="portfolio-item d-block mx-auto">
                         <img class="img-fluid" src="images/portfolio2.png" alt="">
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-                        <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                            <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
+                    <a class="portfolio-item d-block mx-auto">
                         <img class="img-fluid" src="images/portfolio3.png" alt="">
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
-                        <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                            <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
+                    <a class="portfolio-item d-block mx-auto">
                         <img class="img-fluid" src="images/portfolio4.png" alt="">
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
-                        <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                            <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
+                    <a class="portfolio-item d-block mx-auto">
                         <img class="img-fluid" src="images/portfolio5.png" alt="">
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
-                        <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                            <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
+                    <a class="portfolio-item d-block mx-auto">
                         <img class="img-fluid" src="images/portfolio6.png" alt="">
                     </a>
                 </div>
@@ -128,23 +100,49 @@
         </div>
     </section>
 
-    <section id="sobre">
+    <section class="portfolio" id="sobre">
         <div class="container">
-            <h2 class="text-center text-uppercase text-dark">Sobre</h2>
+            <h2 class="text-center text-dark mb-0">Sobre</h2>
             <hr class="mb-3">
             <div class="row">
-                <div class="col-lg-6 ml-auto">
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus sed inventore quaerat sapiente, praesentium qui tenetur quae, error, reprehenderit temporibus, obcaecati nemo quis. Nemo beatae aliquid odio sit ut sint!</p>
+                <div class="col-lg-6">
+                    <a class="portfolio-item d-block mx-auto lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus sed inventore quaerat sapiente, praesentium
+                        qui tenetur quae, error, reprehenderit temporibus, obcaecati nemo quis. Nemo beatae aliquid odio
+                        sit ut sint!</a>
                 </div>
-                <div class="col-lg-6 mr-auto">
-                    <p class="lead">Et suscipit asperiores quasi explicabo rem dolore maiores id soluta provident culpa expedita corrupti reprehenderit, ratione, repellendus cupiditate ut assumenda nulla ea mollitia alias officiis. Quibusdam dolores ratione maxime, nesciunt.
-                    </p>
+                <div class="col-lg-6">
+                    <a class="portfolio-item d-block mx-auto lead">Et suscipit asperiores quasi explicabo rem dolore maiores id soluta provident culpa expedita corrupti
+                        reprehenderit, ratione, repellendus cupiditate ut assumenda nulla ea mollitia alias officiis. Quibusdam
+                        dolores ratione maxime, nesciunt.
+                    </a>
                 </div>
             </div>
             <hr class="mb-3">
         </div>
     </section>
 
+    <!-- <section class="portfolio" id="ah">
+            <div class="container">
+                <h2 class="text-center text-dark mb-0">Sobre</h2>
+                <hr class="mb-3">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <a class="portfolio-item d-block mx-auto lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus sed inventore quaerat sapiente, praesentium
+                            qui tenetur quae, error, reprehenderit temporibus, obcaecati nemo quis. Nemo beatae aliquid odio
+                            sit ut sint!</a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a class="portfolio-item d-block mx-auto lead">Et suscipit asperiores quasi explicabo rem dolore maiores id soluta provident culpa expedita corrupti
+                            reprehenderit, ratione, repellendus cupiditate ut assumenda nulla ea mollitia alias officiis. Quibusdam
+                            dolores ratione maxime, nesciunt.
+                        </a>
+                    </div>
+                </div>
+                <hr class="mb-3">
+            </div>
+        </section> -->
+
+        
     <footer class="copyright py-4 text-center text-white" id="footer">
         <div class="container">
             <small>Todos os direitos reservados &copy; 2016</small>
@@ -153,7 +151,10 @@
 
     <!-- Javascript -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./node_modules/jquery/jquery.min.js"></script>
     <script src="./node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./js/app.js"></script>
 
 </body>
 
